--- a/sass/sections/header/_header-middle.scss
+++ b/sass/sections/header/_header-middle.scss
@@ -149,7 +149,10 @@
 }
 
 .header-middle__button {
-	width: 210px;
+
+	.button {
+		width: 210px;
+	}
 
 	/* Tablet */
 	@media (max-width: 1429px) {
