--- a/sass/blocks/cards/_auto-card.scss
+++ b/sass/blocks/cards/_auto-card.scss
@@ -100,6 +100,11 @@
 		width: 14px;
 		height: 16px;
 	}
+
+	& input.visually-hidden:checked~span svg {
+		fill: $accent-color;
+		stroke: $accent-color;
+	}
 }
 
 .auto-card__badge-row {
