--- a/sass/sections/_section-tabs.scss
+++ b/sass/sections/_section-tabs.scss
@@ -41,21 +41,27 @@
 		&:hover,
 		&.active {
 			color: $accent-color;
+		}
 
-			&::after {
-				content: "";
-				position: absolute;
-				left: 0;
-				bottom: -22px;
-				width: 100%;
-				height: 3px;
-				background-color: $accent-color;
+		&::after {
+			content: "";
+			position: absolute;
+			left: 0;
+			bottom: -22px;
+			width: 100%;
+			height: 3px;
+			background-color: transparent;
+			transition: background-color .2s ease-in;
 
-				/* Tablet */
-				@media (max-width: 1429px) {
-					bottom: -12px;
-				}
+			/* Tablet */
+			@media (max-width: 1429px) {
+				bottom: -12px;
 			}
+		}
+
+		&:hover::after,
+		&.active::after {
+			background-color: $accent-color;
 		}
 	}
 }
