--- a/sass/blocks/_links.scss
+++ b/sass/blocks/_links.scss
@@ -1,3 +1,11 @@
+.link-underline {
+	text-decoration: underline;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
 .phone-link {
 	pointer-events: none;
 	cursor: default;
