--- a/sass/blocks/cards/_auto-card.scss
+++ b/sass/blocks/cards/_auto-card.scss
@@ -320,8 +320,8 @@
 			line-height: 22px;
 
 			img {
+				width: 14px !important;
 				height: 11px;
-				width: auto;
 				object-fit: contain;
 			}
 		}
