--- a/sass/blocks/_inputs.scss
+++ b/sass/blocks/_inputs.scss
@@ -1,5 +1,6 @@
 .input {
-	padding: 25px 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 	height: 65px;
 	border: 1px solid #EFF0F0;
 	background-color: #FFF;
