--- a/css/main.css
+++ b/css/main.css
@@ -1481,7 +1481,7 @@ body > * {
 }
 .auto-card__button.red svg {
   position: absolute;
-  right: -18px;
+  right: -17px;
   top: 0;
   fill: #CA0100;
   transition: fill .2s ease-in;
@@ -1515,7 +1515,7 @@ body > * {
 }
 .auto-card__button.black svg {
   position: absolute;
-  right: -18px;
+  right: -17px;
   top: 0;
   fill: #262626;
   transition: fill .2s ease-in;
@@ -1550,7 +1550,7 @@ body > * {
 }
 .auto-card__button.gray svg {
   position: absolute;
-  right: -18px;
+  right: -17px;
   top: 0;
   fill: #737373;
   transition: fill .2s ease-in;
@@ -2879,9 +2879,9 @@ a.rating-map-card__link {
   top: 50%;
   transform: translateY(-50%);
   left: 0;
-  width: 7px;
+  width: 8px;
   height: 12px;
-  background-image: url("./../../../img/general/arrow-right.svg");
+  background-image: url("data:image/svg+xml,%3Csvg width='8' height='12' viewBox='0 0 8 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.41846 6.00003C7.41846 6.2151 7.33634 6.43013 7.17245 6.5941L2.01268 11.7538C1.68445 12.0821 1.15229 12.0821 0.824195 11.7538C0.496102 11.4257 0.496102 10.8937 0.824195 10.5654L5.38985 6.00003L0.824354 1.43461C0.496261 1.10638 0.496261 0.574381 0.824354 0.246314C1.15245 -0.0820713 1.68461 -0.0820713 2.01283 0.246314L7.17261 5.40596C7.33652 5.57001 7.41846 5.78505 7.41846 6.00003Z' fill='%23CA0100'/%3E%3C/svg%3E");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
