--- a/sass/blocks/navigation/_main-menu.scss
+++ b/sass/blocks/navigation/_main-menu.scss
@@ -45,7 +45,7 @@
 
 .desktop-menu__middle {
 	width: calc(4 * ((100% - 30px * 11) / 12) + 3 * 30px);
-	
+
 	/* Tablet */
 	@media (max-width: 1429px) {
 		width: calc((100% - 30px) * 0.6);
@@ -100,7 +100,7 @@
 
 .desktop-menu__list+.desktop-menu__title {
 	margin-top: 15px;
-	
+
 	/* Tablet */
 	@media (max-width: 1429px) {
 		margin-top: 0;
@@ -147,9 +147,9 @@
 			top: 50%;
 			transform: translateY(-50%);
 			left: 0;
-			width: 7px;
+			width: 8px;
 			height: 12px;
-			background-image: url('./../../../img/general/arrow-right.svg');
+			background-image: url("data:image/svg+xml,%3Csvg width='8' height='12' viewBox='0 0 8 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.41846 6.00003C7.41846 6.2151 7.33634 6.43013 7.17245 6.5941L2.01268 11.7538C1.68445 12.0821 1.15229 12.0821 0.824195 11.7538C0.496102 11.4257 0.496102 10.8937 0.824195 10.5654L5.38985 6.00003L0.824354 1.43461C0.496261 1.10638 0.496261 0.574381 0.824354 0.246314C1.15245 -0.0820713 1.68461 -0.0820713 2.01283 0.246314L7.17261 5.40596C7.33652 5.57001 7.41846 5.78505 7.41846 6.00003Z' fill='%23CA0100'/%3E%3C/svg%3E");
 			background-size: contain;
 			background-position: center;
 			background-repeat: no-repeat;
