--- a/sass/sections/_section-slider.scss
+++ b/sass/sections/_section-slider.scss
@@ -7,6 +7,7 @@
 	position: relative;
 	min-height: 600px;
 	background-color: #EFF0F0;
+	overflow: hidden;
 
 	/* Tablet */
 	@media (max-width: 1429px) {
